--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="shortcut icon" type="image/x-icon" href="//purplepatch.online/assets/ico/favicon.ico">
         <meta name="ad.size" content="width=300,height=250">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <link rel="stylesheet" href="assets/style.css">
         <script src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/carousel.min.js"></script>
-        <link rel="stylesheet" href="assets/style.css?v=1.1">
     </head>
     <body>  
         <div id="container">
